# mcp-demo

./: README.md  pyproject.toml
snippets/: call_openai.py
src/client/: claude_client.py  client.py  sse_client.py
src/server/: math_tools.py  mcp_server_echo.py  mcp_server_math.py  mcp_sse_server_math.py
